Changes made to website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title> Welcome to my website </title>
 </head>
 <body>
-<h1> Hi I am Olimpia. Welcome to my webiste. </h1>
+<h1> Welcome to vriyya</h1>
+<h3> Welcome</h3>
 </body>
 </html>
